# MyTextEditor

./: .gitignore  .gitmodules  CMakeLists.txt  Config.bat  LICENSE.md  README.md  build.bat  main.cpp  run.bat
res/shaders/: font.glsl  rectangle.glsl
src/: Application.cpp  Camera.cpp  Editor.cpp  Font.cpp  IndexBuffer.cpp  Line.cpp  Rectangle.cpp  Renderer.cpp  Shader.cpp  TextCursor.cpp  VertexArray.cpp  VertexBuffer.cpp  Window.cpp
src/headers/: Application.hpp  CMakeVariables.h.in  Camera.hpp  Character.hpp  Editor.hpp  Font.hpp  IndexBuffer.hpp  Line.hpp  Rectangle.hpp  Renderer.hpp  Shader.hpp  TextCursor.hpp  VertexArray.hpp  VertexBuffer.hpp  Window.hpp
src/shaders/: rectangle.glsl  shader.glsl
